--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,11 @@
     "jsxFactory": "h"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/__tests__/*"
+  ],
+  "include": [
+    "src/"
   ],
   "files": [
     "./src/index.ts"
