Back to synchronous rendering
I tried various approaches:
- node streams are to messy
- data is too small to be performant with event emitters
- sync rendering is still fastest and easiest to implement

After I while I learned that I should think of the renderers more as pluggable formatters. In retrospect this makes much more sense

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
-    "noImplicitAny": true,
+    "strict": true,
     "sourceMap": true,
     "pretty": true,
     "declaration": true,
@@ -16,8 +16,5 @@
   ],
   "include": [
     "src/"
-  ],
-  "files": [
-    "./src/index.ts"
   ]
 }
