--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Marvin Hagemeister <marvin@marvinhagemeister.de>",
   "license": "MIT",
   "scripts": {
-    "bench": "ts-node benchmark/index.tsx",
+    "bench": "ts-node benchmark/index.ts",
     "cleanup": "rimraf dist/",
     "lint": "tslint 'src/**/*.ts'",
     "watch": "tsc -w",
@@ -24,10 +24,12 @@
   "devDependencies": {
     "@types/benchmark": "^1.0.30",
     "@types/chai": "^4.0.0",
+    "@types/chalk": "^0.4.31",
     "@types/mocha": "^2.2.41",
     "@types/sinon": "^2.3.1",
     "benchmark": "^2.1.4",
     "chai": "^4.0.2",
+    "chalk": "^1.1.3",
     "mocha": "^3.3.0",
     "nyc": "^11.0.2",
     "preact-render-to-string": "^3.6.3",
