--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "mocha --watch-extensions tsx,ts  --compilers ts:ts-node/register 'src/**/__tests__/*.spec.*'",
     "test-watch": "npm t -- -w -R min",
     "coverage": "nyc npm t",
+    "format": "prettier --trailing-comma=all --write 'src/**/*.{ts,tsx}'",
     "prepublish": "npm run lint && npm t && npm run build"
   },
   "dependencies": {
@@ -30,15 +31,25 @@
     "benchmark": "^2.1.4",
     "chai": "^4.0.2",
     "chalk": "^1.1.3",
+    "husky": "^0.13.4",
+    "lint-staged": "^3.6.1",
     "mocha": "^3.3.0",
     "nyc": "^11.0.2",
     "preact-render-to-string": "^3.6.3",
+    "prettier": "^1.4.4",
     "rimraf": "^2.6.1",
     "sinon": "^2.3.2",
     "ts-node": "^3.0.2",
     "tslint": "^5.1.0",
     "tslint-config-sevenval": "^0.6.1",
     "typescript": "^2.3.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --trailing-comma=all --write",
+      "npm run lint",
+      "git add"
+    ]
   },
   "nyc": {
     "include": [
