--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "ts-node": "^3.1.0",
     "tslint": "^5.1.0",
     "tslint-config-sevenval": "^0.6.1",
-    "typescript": "^2.3.4"
+    "typescript": "2.3.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
