--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "@types/chalk": "^0.4.31",
     "@types/mocha": "^2.2.41",
     "@types/sinon": "^2.3.1",
-    "benchmark": "^2.1.4",
+    "benchmarkjs-pretty": "^1.0.0",
     "chai": "^4.0.2",
-    "chalk": "^1.1.3",
     "husky": "^0.13.4",
     "lint-staged": "^4.0.0",
     "mocha": "^3.3.0",
